# shmem-bind

./: Cargo.toml  README.md
examples/: message-passing.rs
src/: lib.rs
