[package]
name = "shmem-box"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ArshiA Akhavan <letmemakenewone@gmail.com>"]
description = "A safe and ideomatic abstraction over shared memory APIs in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

[[example]]
name = "message-passing"
path = "examples/message-passing.rs"
