[package]
name = "shmem-bind"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ArshiA Akhavan <letmemakenewone@gmail.com>"]
description = "A safe and idiomatic wrapper over shared memory APIs in rust"
keywords = ["shared_memory", "shmem", "shared-memory", "shared-mem", "shared_mem"]
categories = ["api-bindings", "os::unix-apis"]
repository = "https://github.com/ArshiAAkhavan/shmem-bind"

[dependencies]
libc = "0.2.153"

[[example]]
name = "message-passing"
path = "examples/message-passing.rs"
